usr.bin/elfdump/elfdump.c
@@ -663,7 +663,7 @@ main(int ac, char **av)
 		case SHT_NOTE:
 			name = elf_get_word(e, v, SH_NAME);
 			if (flags & ED_NOTE &&
-			    strcmp(shstrtab + name, ".note.ABI-tag") == 0)
+			    strcmp(shstrtab + name, ".note.tag") == 0)
 				elf_print_note(e, v);
 			break;
 		case SHT_DYNSYM:
